For 1.21.1
	- OpenGL Shaders code should compile on OpenGL 1.5 and above now (was 2.0 and above)

	- XML encoded X3D - increased field attribute parsing speed.

	- PROTOS and VRML/X3D Classic - dramatic increase in PROTO expansion; visible in large protos.

	- Add code to verify Profiles and Components. Verifying components; unverified components
	  are assumed "good". See code in CFuncs/capabilitiesHandler.c for current status of verified
	  components.
        	- Grouping,           3,      /* October 29, 2008 */
        	- Core,               1,      /* October 29, 2008 */
        	- Time,               2,      /* October 29, 2008 */


	- Javascript, direct writing to scenegraph, boolean values were not correctly translated from
	  javascript to freewrl internal values.

	- FaceSets with Color node, not taking material properties correctly (especially transparency)

	- FaceSets, with RGB Color node, keep track of associated material transparency, and work through
	  color node changes.

	- removal of temporary files - code has been reworked, as some temporary files (specific:
	  files retrieved by wget or curl) were not removed.

	- initial work on CubeMapTextures.

	- GeoPositionInterpolator - output value not translated to local spatial units. (fixed)

	- EAI/SAI - PROTO expansion getField calls now work as expected.

	- XML-formatted X3D - PROTO and EXTERNPROTO field expansion work.

	- Shaders - only compile if OpenGL 2.0 or above is installed. Will work on OpenGL versions with
	  shader ARB system call names.

	- CFuncs/sounds.h - include unistd.h on Linux machines.

	- Macros to help "set" SF fields get used, when the equivalent "non set_" field is used.
	  eg, "set_orientation" inputOnly field in GeoViewpoint, when we have an initializeOnly "orientation" field.
	  Should rework all other nodes to use these macros. NOTE: MF fields are handled by the macro
	  EVIN_AND_FIELD_SAME.

For 1.21.0